--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=big5">
 <TITLE></TITLE>
 </HEAD>
-this is not ready
+this is not ready, a lot need to do. 
 </body>
 </HTML>
