--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    hello everyone
+    <h1>Hello everyone</h1>
+    <h2>now I am trying the emmet</h2>
+    <a href="http://google.com.tw"></a>
+    <button>aaaa</button>
+        <img src="" alt="">
+        
+
+<ul><li></li></ul>
+<div><p>aaaaaaaaa</p></div>
+<span>aaaaaaaa</span>
 </body>
 </html>
