menu not working on phone fix1

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" aria-label="Main navigation">
   <div class="container-fluid">
-    <a class="navbar-brand" href="https://johannlmiller.github.io/WebEZ/">WebEZ</a>
+    <a class="navbar-brand" href="#">WebEZ</a>
     <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
