--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <div class="topnavbar">
         <input type="checkbox" id="menu-icon-input">
         <label id="menu-icon" for="menu-icon-input">&#9776;</label>
-        <div class="nav-item">
+        <div class="nav-items">
             <ul>
                 <li><a href="#" class="active">home</a></li>
                 <li><a href="#" >Services</a></li>
                 <li><a href="#" >Projects</a></li>
                 <li><a href="#" >About</a></li>
                 <li><a href="#" >Blog</a></li>
-                <li><a href="#" >Contacts</a></li>
+                <li><a href="#" class="active">Contacts</a></li>
 
 
             </ul>
