--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     <div class="topnavbar">
+        
         <input type="checkbox" id="menu-icon-input">
-        <label id="menu-icon" for="menu-icon-input">&#9776;</label>
+        <label id="menu-icon" for="menu-icon-input">____________________________________ &#9776;</label>
         <div class="nav-items">
             <ul>
                 <li><a href="#" class="active">home</a></li>
@@ -19,7 +20,7 @@
                 <li><a href="#" >Projects</a></li>
                 <li><a href="#" >About</a></li>
                 <li><a href="#" >Blog</a></li>
-                <li><a href="#" class="active">Contacts</a></li>
+                <li><a href="#" >Contacts</a></li>
 
 
             </ul>
