--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="topnavbar">
         
         <input type="checkbox" id="menu-icon-input">
-        <label id="menu-icon" for="menu-icon-input">____________________________________ &#9776;</label>
+        <label id="menu-icon" for="menu-icon-input"> &#9776;</label>
         <div class="nav-items">
             <ul>
                 <li><a href="#" class="active">home</a></li>
