--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="topnavbar">
         
         <input type="checkbox" id="menu-icon-input">
-        <label id="menu-icon" for="menu-icon-input"> &#9776;</label>
+        <span class="logo">Johann</span><label id="menu-icon" for="menu-icon-input"> &#9776;</label>
         <div class="nav-items">
             <ul>
-                <li><a href="#" class="active">home</a></li>
+                <li><a href="#" >home</a></li>
                 <li><a href="#" >Services</a></li>
                 <li><a href="#" >Projects</a></li>
                 <li><a href="#" >About</a></li>
