--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         </div>
         <div class="w3-third">
-            <h2>Jacascript</h2>
+            <h2>JavaScript</h2>
             <p><script src="script.js"></script>
 
         </div>
