<style> video {   max-width: 100%;   height: auto; } </style>

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Johann Navibar</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="w3.css">
-
+    <style>
+        video {
+          max-width: 100%;
+          height: auto;
+        }
+        </style>
 </head>
 <body>
     <div class="topnavbar">
