--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
         <div class="w3-third">
             <h2 id="Python">Python</h2>
-            <p>OOkay, I am totally new to python.
+            <p>Okay, I am new to python.
               Here I try to make a shooting game by pygame.</p>
             <p>  <video  controls preload="metadata">
                   <source src="videos/python_pygame.mov" type="video/mp4">
