--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
           <h2 id="swift">SWIFT</h2>
           <p>I use Xcode IDE programming by SWIFT to build iOS apps </p>
           <p>there are some simple samples here to show AR and some other iOS apps.    </p>
-           <p> <video  controls preload="metadata">
+           <p><br>Evee RP <video  controls preload="metadata">
                 <source src="videos/RP3Devee.MOV" type="video/mp4">
                 <source src="resources/myvideo.webm" type="video/webm">
               Your browser does not support the video tag.
               </video></p>
-            <p><video controls preload="metadata">
+            <p><br>NewsPaper autoload video<video controls preload="metadata">
                 <source src="videos/magic_paper.mov" type="video/mp4">
                 <source src="resources/myvideo.webm" type="video/webm">
               Your browser does not support the video tag.
               </video></p>
-            <p><video   controls preload="metadata">
+            <p><br>Music play<video  controls preload="metadata">
                 <source src="videos/Xyz.mov" type="video/mp4">
                 <source src="resources/myvideo.webm" type="video/webm">
               Your browser does not support the video tag.
@@ -62,7 +62,8 @@
 
         </div>
         <div class="w3-third">
-            <h2 id="JavaScript">JavaScript</h2>
+            <h2 id="JavaScript">JavaScript</h2><br>
+            JavaScript front-end 
             <p> <button onclick="playPause()">Play/Pause</button> 
                
                 <button onclick="makeSmall()">Small</button>
@@ -100,7 +101,7 @@
         </div>
         <div class="w3-third">
             <h2 id="Python">Python</h2>
-            <p>Okay, I am new to python.
+            <p>
               Here I try to make a shooting game by pygame.</p>
             <p>  <video  controls preload="metadata">
                   <source src="videos/python_pygame.mov" type="video/mp4">
