--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
                 <source src="videos/RP3Devee.MOV" type="video/mp4">
                 <source src="resources/myvideo.webm" type="video/webm">
               Your browser does not support the video tag.
-              </video></p>
-            <p><br>NewsPaper autoload video<video controls preload="metadata">
+              </video>
+            <br>NewsPaper autoload video<video controls preload="metadata">
                 <source src="videos/magic_paper.mov" type="video/mp4">
                 <source src="resources/myvideo.webm" type="video/webm">
               Your browser does not support the video tag.
-              </video></p>
-            <p><br>Music play<video  controls preload="metadata">
+              </video>
+            <br>Music playbr <br>
+            <video  controls preload="metadata">
                 <source src="videos/Xyz.mov" type="video/mp4">
                 <source src="resources/myvideo.webm" type="video/webm">
               Your browser does not support the video tag.
