--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
         <div class="w3-third">
             <h2 id="C#">C#</h2>
             <p>coming soon! </p>
+            <p>use vistual studio community</p>
+            <p>Xamarin works with it_</p>
         </div>
         
         
