video auto load

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
   <link rel="stylesheet" type="text/css" href="style.css" />
   <link rel="stylesheet" href="w3.css" />
   <style>
-    video {
-      max-width: 100%;
-      height: auto;
-    }
+
   </style>
 </head>
 
@@ -43,12 +40,12 @@
       </p>
       <p>
         <br />Evee RP
-        <video controls preload="metadata">
+        <video controls preload="auto">
           <source src="videos/RP3Devee.MOV" type="video/mp4" />
           <source src="resources/myvideo.webm" type="video/webm" />
           Your browser does not support the video tag.
         </video>
-        <br />NewsPaper autoload video<video controls preload="metadata">
+        <br />NewsPaper autoload video<video controls preload="auto">
           <source src="videos/magic_paper.mov" type="video/mp4" />
           <source src="resources/myvideo.webm" type="video/webm" />
           Your browser does not support the video tag.
@@ -69,7 +66,7 @@
       </p>
       <br />
       <p>
-        <video id="video1" preload="metadata">
+        <video id="video1" preload="auto">
           <source src="videos/python_pygame.mov" type="video/mp4" />
           <source src="resources/myvideo.webm" type="video/webm" />
           Your browser does not support HTML video.
@@ -100,7 +97,7 @@
       <h2 id="Python">Python</h2>
       <p>Here I try to make a shooting game by pygame.</p>
       <p>
-        <video controls preload="metadata">
+        <video controls preload="auto">
           <source src="videos/python_pygame.mov" type="video/mp4" />
           <source src="resources/myvideo.webm" type="video/webm" />
           Your browser does not support the video tag.
