reinit then add then commit

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
     <div class="w3-third">
       <h2 id="Java">Java</h2>
-      <p>coming soon!</p>
+      <p>coming soon!,xstill working on it</p>
     </div>
   </div>
 </body>
